# ML_Research

NeuralNetwork/MLPClassifier_example/: mlp_example.py
NeuralNetwork/Sequential_example/: Model_Report.md  seq_ex.py
NeuralNetwork/manual_Build/: .manual.cxx.swp  manual.cxx  manual.py
ScientificProgrammer_/: .gitignore  Assignment1.py  Ax=B.py  gmres_example.py  quick-np.py  test.txt
ScientificProgrammer_/Linear_Algebra/Matrix_Ops/Moore-Penrose_Pseudoinverse/: moore_Penrose_Pseudoinverse.py
ScientificProgrammer_/Linear_Algebra/Matrix_Ops/SVD/: image_Compression.ipynb  svd_example-Copy1.ipynb  svd_example.ipynb
general_Mathematics/: formula_ex.md  psuedo_formulas.md  series_Sequence.md
older_examples/ScientificProgrammer_/: Assignment1.py  Ax=B.py  data.txt
older_examples/ScientificProgrammer_/Linear_Algebra/: svd_examples.py
older_examples/general_Mathematics/: formula_ex.md  psuedo_formulas.md
older_examples/project_0/first_model/: Model_02.py  model.py
older_examples/project_0/linear_Regression_SKLearn/regression_modeling/: regression-00.ipynb
older_examples/project_0/linear_Regression_SKLearn/test_dir/: new_regression.ipynb
older_examples/tutorials/data-structures/: .gitignore
older_examples/tutorials/data-structures/cxx_ds/algo/bubblesearch/: bubble.cxx
older_examples/tutorials/data-structures/cxx_ds/containers/adjacency_list/: CMakeLists.txt
older_examples/tutorials/data-structures/cxx_ds/cxx_libraries/boostcxx/matrix_solver/: CMakeLists.txt
older_examples/tutorials/data-structures/cxx_ds/cxx_libraries/cryptocxx/opensslcxx/hashopenssl_cxx/: CMakeLists.txt  main.cxx
older_examples/tutorials/scilearn/t1/: main.py
older_examples/tutorials/scilearn/t2/: main.py
project_0/linear_Regression_SKLearn/: simple_regression.ipynb
project_0/linear_Regression_SKLearn/regression_modeling/: regression-00.ipynb
project_0/linear_Regression_SKLearn/regression_modeling/.ipynb_checkpoints/: notes-checkpoint.txt  regression-00-checkpoint.ipynb
skateboardign_brand_predicter/: MLPClassifier_example.py  README.MD  Sequential_example.py  expanded_dataset.csv
skateboardign_brand_predicter/create_data_set/: existing_dataset.csv  skater_dataset.py  skater_dataset_creation.py
tutorials/data-structures/: .gitignore
tutorials/data-structures/bubbleSort/cxx_ds/algo/bubblesearch/: bubble.cxx  bubnotes.txt
tutorials/data-structures/cxx_ds/algo/bubblesearch/: CMakeLists.txt
tutorials/data-structures/cxx_ds/containers/adjacency_list/: main.cxx
tutorials/data-structures/cxx_ds/cxx_libraries/boost_linux/boost_Linuxtest_cxx/: CMakeLists.txt  main.cxx  test
tutorials/data-structures/cxx_ds/cxx_libraries/boostcxx/matrix_solver/: .CMakeLists.txt.swp
tutorials/data-structures/cxx_ds/cxx_libraries/opencv_linux/: CMakeLists.txt  main.cxx
tutorials/data-structures/cxx_ds/cxx_libraries/opencvcxx/opencvcxx/: CMakeLists.txt  main.cxx  nonfile-system-main.cxx  old-CMakeLists.txt  old-main.cxx  old-working-main.cxx
tutorials/data-structures/cxx_ds/cxx_libraries/shark_linux/shark-01/: .CMakeLists.txt.swp  .main.cxx.swp  CMakeLists.txt  main.cxx
tutorials/scilearn/t2/: vars.py
